--- a/python-colcon-notification/PKGBUILD
+++ b/python-colcon-notification/PKGBUILD
@@ -9,7 +9,7 @@ arch=(any)
 url="https://pypi.org/project/colcon-notification"
 license=('Apache')
 depends=('python-colcon-core')
-makedepends=('python-setuptools' 'flake8')
+makedepends=('python-setuptools' 'flake8' 'python-build' 'python-wheel' 'python-installer')
 source=(
     https://github.com/colcon/colcon-notification/archive/refs/tags/${pkgver}.tar.gz
     https://github.com/myint/scspell/archive/refs/tags/v2.2.tar.gz
