new workflow with branch

--- a/.github/workflows/clone-package.yml
+++ b/.github/workflows/clone-package.yml
@@ -50,15 +50,23 @@ jobs:
           sed -i "/makedepends=/s/)/ \'python-build\' \'python-wheel\' \'python-installer\')/" PKGBUILD
 
       - name: Update github
+        shell: bash
         run: |
           git config --local user.email "gitbarnabedikartola@gmail.com"
           git config --local user.name "gitbarnabedikartola"
-          git add --all
-          if [ -n "$(git commit -m "update $(date +%y-%m-%d_%H:%M)" -a | grep "nothing to commit")" ];then exit 0; fi
+          git add -fv --al
+          if [ -n "$(git commit -m "update $(date +%y-%m-%d_%H:%M)" -a | grep "nothing to commit")" ];then echo "nothing to commit"; exit 0; fi
 
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
           # github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: ${{ github.ref }}
+
+      - name: Trigger Build Workflow
+        uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          event-type: build
+          client-payload: '{"bigbranch": "${{ github.event.client_payload.branch }}"}'
 
